--- a/content/posts/11-03-2025.md
+++ b/content/posts/11-03-2025.md
@@ -1,8 +1,9 @@
 ---
 title: "Basic usage of GenAI for academic researches."
 date: 2025-03-11
-draft: false
+draft: true
 ShowToc: true
+author: Artur Sendyka
 ---
 
 During my last few months after 100% focus my energy for academic work and studies, I want it to deep more the AI topics according to humanity sciences which are harder to provide expected tools with successed results which they need it. According to STEM, it's more easier predict results which GenAI will solve. With humanity contect, it's not simple job. LLM model prediction and accurancy to generate answear about problems ex. in psychology area (like, a causions of seasonate depression) or semionity (like, a heritages of latgala's people from Latvia), it's less accurate than predict percent of unemployed people based on provided datasets.
