--- a/content/posts/04-03-2025.md
+++ b/content/posts/04-03-2025.md
@@ -2,7 +2,7 @@
 title: "The Situation of Polish LGBTQ People in 2025: A Balanced Critical Analysis"
 date: 2025-03-04
 draft: false
-ShowToc: true
+ShowToc: false
 author: Artur Sendyka
 ---
 
