--- a/content/posts/04-03-2025.md
+++ b/content/posts/04-03-2025.md
@@ -2,8 +2,11 @@
 title: "The Situation of Polish LGBTQ People in 2025: A Balanced Critical Analysis"
 date: 2025-03-04
 draft: false
-ShowToc: false
-author: Artur Sendyka
+ShowToc: true
+params:
+    author: Artur Sendyka
+    description: "In the domain of social politics, the situation of LGBTQ people in Poland in 2025 is a highly ambiguous and evolving case. During the last few decades, the interaction between cultural tradition and governmental policy on the one hand, and pressure from international organizations on the other hand, has created an environment that is at the same time oppressive. Slowly improving for queer people. This essay aims to describe the current  state of Polish LGBTQ people by incorporating theoretical frameworks into both personal experiences and observations within the community."
+    keywords: LGBTQ people, Poland community, Critical Analysis, Social perspective
 ---
 
 In the domain of social politics, the situation of LGBTQ people in Poland in 2025 is a highly ambiguous and evolving case. During the last few decades, the interaction between cultural tradition and governmental policy on the one hand, and pressure from international organizations on the other hand, has created an environment that is at the same time oppressive. Slowly improving for queer people. This essay aims to describe the current  state of Polish LGBTQ people by incorporating theoretical frameworks into both personal experiences and observations within the community.
