--- a/content/posts/04-03-2025.md
+++ b/content/posts/04-03-2025.md
@@ -2,14 +2,12 @@
 title: "The Situation of Polish LGBTQ People in 2025: A Balanced Critical Analysis"
 date: 2025-03-04
 draft: false
-ShowToc: true
+ShowToc: false
 params:
     author: Artur Sendyka
 description: "In the domain of social politics, the situation of LGBTQ people in Poland in 2025 is a highly ambiguous and evolving case. During the last few decades, the interaction between cultural tradition and governmental policy on the one hand, and pressure from international organizations on the other hand, has created an environment that is at the same time oppressive. Slowly improving for queer people. This essay aims to describe the current  state of Polish LGBTQ people by incorporating theoretical frameworks into both personal experiences and observations within the community."
 keywords: LGBTQ people, Poland community, Critical Analysis, Social perspective
 ---
-
-In the domain of social politics, the situation of LGBTQ people in Poland in 2025 is a highly ambiguous and evolving case. During the last few decades, the interaction between cultural tradition and governmental policy on the one hand, and pressure from international organizations on the other hand, has created an environment that is at the same time oppressive. Slowly improving for queer people. This essay aims to describe the current  state of Polish LGBTQ people by incorporating theoretical frameworks into both personal experiences and observations within the community.
 
 The use of social identity theory and critical legal studies is critical in understanding the situation. According to social identity theory, self-concept is determined partly by group memberships and that discrimination or marginalization is damaging to  collective identity and self-esteem. In the Polish context, decades of conservative cultural norms and the Catholic Church  have established very strict boundaries for what constitutes an acceptable identity. At the same time, critical legal studies  discuss the role of law as a tool of power and ideology, which shows that many state policies and institutional arrangements are used as gateways to the inclusion or exclusion of society. According to Bogatyrev and Bogusz in their analysis of LGBTQ politics in Poland, the actions of institutions  whether through the legislature or by implementation in practice are important determinants of the public perception and often support the social barriers that prevent the integration of queers.
 
