--- a/content/posts/17-02-2025.md
+++ b/content/posts/17-02-2025.md
@@ -44,7 +44,7 @@ Technologie, takie jak sztuczna inteligencja (SI) oraz uczenie maszynowe, mogą 
 Oprócz edukacji i regulacji prawnych kluczowym elementem przeciwdziałania patologiom internetowym jest promowanie pozytywnych wzorców zachowań w Internecie. Kampanie społeczne, organizowane przez organizacje pozarządowe, instytucje rządowe i firmy technologiczne, mogą przyczynić się do zmiany kultury online w kierunku bardziej pozytywnym i konstruktywnym. W Polsce Fundacja Dajemy Dzieciom Siłę prowadzi kampanię "Nie zagub dziecka w sieci" gdzie pisze w raporcie Wrzesień, A. (2009), która ma na celu edukowanie rodziców na temat tego, jak rozmawiać z dziećmi o bezpieczeństwie w Internecie. Podobne kampanie są prowadzone na całym świecie i mają na celu uświadamianie społeczeństwu, że zachowania w sieci mają realne konsekwencje, zarówno dla jednostek, jak i całych grup społecznych. Ważne jest również zaangażowanie influencerów, którzy często mają duży wpływ na młodsze pokolenia. Współpraca z influencerami, promującymi odpowiedzialne korzystanie z Internetu oraz szacunek wobec innych użytkowników, może pomóc w kształtowaniu pozytywnych postaw wśród młodzieży. (Zając, Ż. i Zamojska, A., 2020)
 Podsumowując, patologie kultury internetowej, takie jak cyberprzemoc, patostreaming, sharenting, dezinformacja i fake news, mają głęboki i wielowymiarowy wpływ na jednostki oraz całe społeczeństwa. Anonimowość i globalny charakter Internetu sprawia, że przeciwdziałanie tym niebezpiecznym zjawiskom jest wyjątkowo trudne, jednak możliwe poprzez skoordynowane i kompleksowe działania edukacyjne, prawne oraz technologiczne. Kluczową rolę w tym procesie odgrywają rodzice, nauczyciele, organizacje pozarządowe oraz firmy technologiczne, które muszą ściśle ze sobą współpracować, aby stworzyć bezpieczniejsze i bardziej pozytywne środowisko online. Przed społeczeństwem stoją globalne wyzwania, takie jak rosnąca cyberprzestępczość i dezinformacja, dlatego międzynarodowa współpraca i odpowiedzialne wykorzystanie technologii stanowią fundamentalny element budowy zdrowej oraz konstruktywnej kultury cyfrowej.
 
-##S Bibliografia
+### Bibliografia
 
 Angielczyk, P. Z., 2019. Homo crudelis w dobie Internetu. Parezja. Czasopismo Forum Młodych Pedagogów przy Komitecie Nauk Pedagogicznych PAN, Issue 2(12), pp. 48-64.
 ChildHub, 2017. Elsagate situation: what it is and how it escalates today. [Online] 
