--- a/content/posts/17-02-2025.md
+++ b/content/posts/17-02-2025.md
@@ -46,32 +46,32 @@ Podsumowując, patologie kultury internetowej, takie jak cyberprzemoc, patostrea
 
 ### Bibliografia
 
-Angielczyk, P. Z., 2019. Homo crudelis w dobie Internetu. Parezja. Czasopismo Forum Młodych Pedagogów przy Komitecie Nauk Pedagogicznych PAN, Issue 2(12), pp. 48-64.
-ChildHub, 2017. Elsagate situation: what it is and how it escalates today. [Online] 
+- Angielczyk, P. Z., 2019. Homo crudelis w dobie Internetu. Parezja. Czasopismo Forum Młodych Pedagogów przy Komitecie Nauk Pedagogicznych PAN, Issue 2(12), pp. 48-64.
+- ChildHub, 2017. Elsagate situation: what it is and how it escalates today. [Online] 
 Available at: https://childhub.org/en/child-protection-news/elsagate-situation-what-it-and-how-it-escalates-t
 [Data uzyskania dostępu: Czerwiec 2024].
-Czyżak, M., 2015. Cyberprzestępczość a rozwój społeczeństwa informacyjnego. Ekonomiczne Problemy Usług, Issue 117, pp. 665-673.
-Dyrla-Mularczyk, K. i Pluciński, M., 2017. Cyberbullying i agresja elektroniczna jako współczesne zagrożenia dla komunikacji w sieci. Teraźniejszość – Człowiek – Edukacja, 20(4).
-Esen, R., 2002. Cyber Crime: A Growing Problem. The Journal of Criminal Law, Czerwiec, 66(3).
-Frącz, A., 2019. Hejting – przejawy mowy nienawiści w Sieci. Parezja, Luty, Issue 12.
-Fundacja Orange, 2019. Patostreamy – czym jest i jakie zagrożenia niesie ze sobą zjawisko?. [Online] 
+- Czyżak, M., 2015. Cyberprzestępczość a rozwój społeczeństwa informacyjnego. Ekonomiczne Problemy Usług, Issue 117, pp. 665-673.
+- Dyrla-Mularczyk, K. i Pluciński, M., 2017. Cyberbullying i agresja elektroniczna jako współczesne zagrożenia dla komunikacji w sieci. Teraźniejszość – Człowiek – Edukacja, 20(4).
+- Esen, R., 2002. Cyber Crime: A Growing Problem. The Journal of Criminal Law, Czerwiec, 66(3).
+- Frącz, A., 2019. Hejting – przejawy mowy nienawiści w Sieci. Parezja, Luty, Issue 12.
+- Fundacja Orange, 2019. Patostreamy – czym jest i jakie zagrożenia niesie ze sobą zjawisko?. [Online] 
 Available at: https://fundacja.orange.pl/strefa-wiedzy/post/patostreamy-czym-jest-i-jakie-zagrozenia-niesie
 [Data uzyskania dostępu: Czerwiec 2024].
-Fundacja Orange, 2021. Sharenting – co warto wiedzieć o publikowaniu wizerunku dziecka. [Online] 
+- Fundacja Orange, 2021. Sharenting – co warto wiedzieć o publikowaniu wizerunku dziecka. [Online] 
 Available at: https://fundacja.orange.pl/strefa-wiedzy/post/sharenting-co-warto-wiedziec-o-publikowaniu-wizerunku-dziecka-w-sieci
 [Data uzyskania dostępu: Czerwiec 2024].
-Ishikawa, A., Bollis, E. i Avila, S., 2019. Combating the Elsagate Phenomenon: Deep Learning Architectures for Disturbing Cartoons. brak miejsca, IEEE.
-Jardine, E., Lindner, A. M. i Owenson, G., 2020. The potential harms of the Tor anonymity network cluster disproportionately in free countries. Proceedings of the National Academy of Sciences, 30 Listopad, 117(50), pp. 31716-31721.
-Jas, M., 2020. Patostreaming – ciemna strona internetu. Analiza zjawiska na wybranych przykładach. Media Biznes Kultura, Issue 1(8).
-Kułaga, W., 2022. Transmisja patologii społecznych do internetu. Zagrożenia związane z medialną aktywnością patoinfluenserów, patostreamerów i patoużytkowników. com.press, Issue 4(2), pp. 70-89.
-Livingstone, S. i Helsper, E. J., 2008. Parental Mediation of Children's Internet Use. Journal of Broadcasting & Electronic Media, Listopad, 52(4), pp. 581-599.
-Mascheroni, G. i Ólafsson, K., 2013. Mobile internet access and use among European children. Initial findings of the Net Children Go Mobile project. Październik. 
-Mroczka, K., 2022. Fake newsy jako nowa kategoria zagrożenia systemu bezpieczeństwa ekonomicznego państwa w dobie kryzysu epidemicznego. PRZEGLĄD BEZPIECZEŃSTWA WEWNĘTRZNEGO, 14(26).
-Steinberg, S. B., 2017. Sharenting: Children's Privacy in the Age of Social Media. Emory Law Journal, 66(4).
-Szpakowska, A., 2019. Przemoc seksualna wobec dzieci w cyberprzestrzeni. Parezja. Czasopismo Forum Młodych Pedagogów przy Komitecie Nauk Pedagogicznych PAN, Issue 2(12), pp. 65-76.
-Wikipedia, 2023. Cyberbullying. [Online] 
+- Ishikawa, A., Bollis, E. i Avila, S., 2019. Combating the Elsagate Phenomenon: Deep Learning Architectures for Disturbing Cartoons. brak miejsca, IEEE.
+- Jardine, E., Lindner, A. M. i Owenson, G., 2020. The potential harms of the Tor anonymity network cluster disproportionately in free countries. Proceedings of the National Academy of Sciences, 30 Listopad, 117(50), pp. 31716-31721.
+- Jas, M., 2020. Patostreaming – ciemna strona internetu. Analiza zjawiska na wybranych przykładach. Media Biznes Kultura, Issue 1(8).
+- Kułaga, W., 2022. Transmisja patologii społecznych do internetu. Zagrożenia związane z medialną aktywnością patoinfluenserów, patostreamerów i patoużytkowników. com.press, Issue 4(2), pp. 70-89.
+- Livingstone, S. i Helsper, E. J., 2008. Parental Mediation of Children's Internet Use. Journal of Broadcasting & Electronic Media, Listopad, 52(4), pp. 581-599.
+- Mascheroni, G. i Ólafsson, K., 2013. Mobile internet access and use among European children. Initial findings of the Net Children Go Mobile project. Październik. 
+- Mroczka, K., 2022. Fake newsy jako nowa kategoria zagrożenia systemu bezpieczeństwa ekonomicznego państwa w dobie kryzysu epidemicznego. PRZEGLĄD BEZPIECZEŃSTWA WEWNĘTRZNEGO, 14(26).
+- Steinberg, S. B., 2017. Sharenting: Children's Privacy in the Age of Social Media. Emory Law Journal, 66(4).
+- Szpakowska, A., 2019. Przemoc seksualna wobec dzieci w cyberprzestrzeni. Parezja. Czasopismo Forum Młodych Pedagogów przy Komitecie Nauk Pedagogicznych PAN, Issue 2(12), pp. 65-76.
+- Wikipedia, 2023. Cyberbullying. [Online] 
 Available at: https://pl.wikipedia.org/wiki/Cyberprzemoc
-Wikipedia, 2023. Cyberpathology. [Online] 
+- Wikipedia, 2023. Cyberpathology. [Online] 
 Available at: https://en.wikipedia.org/wiki/Cyberpathology
-Wrzesień, A., 2009. Profilaktyka cyberprzemocy – przykłady działań z Polski i świata. Dziecko Krzywdzone. Teoria, badania, praktyka, 8(1).
-Zaiats, Z. i Zamojska, A., 2020. WPŁYW MEDIÓW SPOŁECZNOŚCIOWYCH NA BEZPIECZEŃSTWO ZDROWOTNE NA PRZYKŁADZIE FACEBOOKA, INSTAGRAMA ORAZ YOUTUBE. Міжнародні відносини, суспільні комунікації та регіональні студії, Issue 1(7).
+- Wrzesień, A., 2009. Profilaktyka cyberprzemocy – przykłady działań z Polski i świata. Dziecko Krzywdzone. Teoria, badania, praktyka, 8(1).
+- Zaiats, Z. i Zamojska, A., 2020. WPŁYW MEDIÓW SPOŁECZNOŚCIOWYCH NA BEZPIECZEŃSTWO ZDROWOTNE NA PRZYKŁADZIE FACEBOOKA, INSTAGRAMA ORAZ YOUTUBE. Міжнародні відносини, суспільні комунікації та регіональні студії, Issue 1(7).
