--- a/content/posts/17-02-2025.md
+++ b/content/posts/17-02-2025.md
@@ -7,7 +7,7 @@ params:
     author: Artur Sendyka
 description: "W XXI wieku doświadczamy w przestrzeni Internetu masowego udostępniania treści i zachowań uważanych za nieobyczajne i patologiczne. W procesie rozwoju dostępu do sieci teleinformatycznych na świecie następuje większa ilość przekazywanych informacji. Tym samym pojawiają się materiały, które przedstawiają ludzką krzywdę, cierpienie, ból. Moderacja i kontrola udostępniania danych przez firmy oraz władze państw nie blokuje dostępu do tych treści i można do nich pozyskać i tak łatwy dostęp, ponieważ pojawia się ich zbyt dużo w zbyt szybkim czasie i nie ma możliwości zapanować nad tym. Jeśli spojrzymy również na to, że poza siecią Internet istnieje także sieć Tor, która daje większą anonimowość oraz utrudnia służbą moderowanie i egzekwowanie prawa udostępnianych informacji, mamy sieć wypełnioną patologiami społecznymi i anarchię. Tworzy się społeczność, która żyje ponad prawem, ukrywając się za dziesiątką urządzeń połączonych między sobą na całym świecie, wykorzystując trudne do złamania szyfrowanie danych. Taka sytuacja prowadzi nas do świata anonimowości, która daje poczucie pewności siebie i bezkarności, a to tym samym prowadzi nas do obrazu anarchii. Nawet problemem staje się to, że mimo tego nawet w Internecie, gdzie łatwo namierzyć dane, pojawiają się filmy, czy nawet transmisję na żywo z przemocy fizycznej i psychicznej. Trudno jest zapanować nad masowością tych treści, gdy ich pojawia się miliony i mają do tego wszyscy, łącznie z dziećmi. Sytuacja przez ostatnie 10 lat staje się coraz bardziej poważna dla wielu państw na świecie. Powstaje co raz więcej komórek policji ds. cyberbezpieczeństwa, aby minimalizować występowanie tego ryzyka."
 keywords: sharenting, elsagate, patostreaming, cyberprzemoc, fakenews
-
+url: patologie-kultury-internetu
 ---
 
 Internet stał się nieodzowną częścią codziennego życia, łącząc ludzi na całym świecie i ułatwiając wymianę informacji. Choć to medium ma wiele zalet, kryje również ciemne zakątki, w których szerzą się patologiczne zachowania i treści. Rozwój sieci telekomunikacyjnych doprowadził do bezprecedensowego wzrostu ilości informacji udostępnianych w sieci. Ten wzrost skutkował rozpowszechnianiem treści przedstawiających ludzkie cierpienie, ból i krzywdę. Pomimo wysiłków firm i władz państwowych w zakresie moderacji i kontroli udostępniania danych, ogromna ilość i szybkość przepływu treści sprawia, że zarządzanie nimi jest praktycznie niemożliwe. W konsekwencji materiały niemoralne i patologiczne stały się łatwo dostępne. Ta łatwość dostępu do szkodliwych treści doprowadziła do normalizacji zachowań i działań, które kiedyś były uważane za tabu lub nieakceptowalne. Internet, w swoim ogromie, stał się mieczem obosiecznym, oferując zarówno nieporównywalne możliwości łączenia się i uczenia, jak i siedlisko ciemniejszych aspektów ludzkiej natury. Rozwój patologii internetowych można przypisać wielu czynnikom, zarówno technologicznym, jak i społecznym. Kluczowe elementy, które sprzyjają eskalacji negatywnych zjawisk online, to anonimowość użytkowników, nieskuteczność regulacji prawnych, dynamiczny rozwój platform internetowych oraz algorytmy, które promują kontrowersyjne treści. Aby lepiej zrozumieć przyczyny tych patologii, konieczne jest przyjrzenie się zarówno czynnikom psychologicznym, jak i technologicznym, które napędzają te zjawiska. Rosnąca anonimowość w sieci jest jednym z kluczowych czynników ułatwiających rozprzestrzenianie się zachowań patologicznych (Szpakowska, A., 2019) (Angielczyk, Z, P., 2019).
